--- a/index.html
+++ b/index.html
@@ -4,31 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bulma.css">
+    <link rel="stylesheet" href="styles/styles.css">
+
     <title>КИБРА - разработка приложений под Битрикс24</title>
 </head>
 <body>
-    <header class="hero is-info">
-        <div class="container">
-            <div class="columns is-vcentered">
-                <div class="column">
-                    <div class="title is-size-1">
-                        КИБРА
-                    </div>
+    <header class="header">
+        <div class="container dir-row">
+            <div class="logo">
+                <div class="logo-header-title">
+                    КИБРА24
                 </div>
-                <div class="column">
+                <div class="logo-header-subtitle">
                     Разработка приложений для Битрикс24
                 </div>
             </div>
+            <div class="pay-wrapper">
+                <button>Оплатить заказ</button>
+            </div>
+            <div class="contact-wrapper">
+                <a href="https://tlgg.ru/voron_76"><img src="img/t_logo.svg" alt=""></a>
+                <div class="phone">phone</div>
+            </div>
         </div>
     </header>
-    <section class="section">
-        <div class="container">
-            Разработка приложений для Битрикс24
+
+    <main class="main">
+        <div class="container dir-column">
+            <div class="title-wrapper">
+                <h1 class="h1">
+                    Разработка приложений для Битрикс24
+                </h1>
+                <h2 class="h2">
+                    Приложения, активити, роботы, бизнес-процессы, интеграции
+                </h2>
+            </div>
+            <form action="send.php" class="form dir-column">
+                <h2 class="h2 h2--form">Отправить заявку</h2>
+                <input type="text" class="input" placeholder="Имя"></input>
+                <input type="email" class="input" placeholder="E-mail"></input>
+                <input type="text" class="input" placeholder="Заявка"></input>
+                <input type="submit" class="button"></input>
+            </form>
         </div>
-    </section>
+    </main>
+
     <footer class="footer">
-        <div class="container">bbbbbbb</div>
+        <div class="container dir-row">
+            <div class="logo">
+                <div class="logo-footer-title">
+                    КИБРА24
+                </div>
+                <div class="logo-footer-subtitle">
+                    Разработка приложений для Битрикс24
+                </div>
+            </div>
+            <ul class="footer-menu">
+                <li>Юридическая информация</li>
+                <li>Оплата</li>
+                <li>Порядок выполнения заказа</li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
